[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.15", features = ["derive"] }
reqwest = "0.11.11"
serde_json = "1.0.82"
tokio = { version = "1.20.1", features = ["full"] }
